; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_malloc.c_contigmalloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_malloc.c_contigmalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.malloc_type = type { i32 }

@VM_MEMATTR_DEFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @contigmalloc(i64 %0, %struct.malloc_type* %1, i32 %2, i32 %3, i32 %4, i64 %5, i32 %6) #0 {
  %8 = alloca i64, align 8
  %9 = alloca %struct.malloc_type*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  store i64 %0, i64* %8, align 8
  store %struct.malloc_type* %1, %struct.malloc_type** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i64 %5, i64* %13, align 8
  store i32 %6, i32* %14, align 4
  %16 = load i64, i64* %8, align 8
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* %11, align 4
  %19 = load i32, i32* %12, align 4
  %20 = load i64, i64* %13, align 8
  %21 = load i32, i32* %14, align 4
  %22 = load i32, i32* @VM_MEMATTR_DEFAULT, align 4
  %23 = call i64 @kmem_alloc_contig(i64 %16, i32 %17, i32 %18, i32 %19, i64 %20, i32 %21, i32 %22)
  %24 = inttoptr i64 %23 to i8*
  store i8* %24, i8** %15, align 8
  %25 = load i8*, i8** %15, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %32

27:                                               ; preds = %7
  %28 = load %struct.malloc_type*, %struct.malloc_type** %9, align 8
  %29 = load i64, i64* %8, align 8
  %30 = call i32 @round_page(i64 %29)
  %31 = call i32 @malloc_type_allocated(%struct.malloc_type* %28, i32 %30)
  br label %32

32:                                               ; preds = %27, %7
  %33 = load i8*, i8** %15, align 8
  ret i8* %33
}

declare dso_local i64 @kmem_alloc_contig(i64, i32, i32, i32, i64, i32, i32) #1

declare dso_local i32 @malloc_type_allocated(%struct.malloc_type*, i32) #1

declare dso_local i32 @round_page(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
